--- a/ss.css
+++ b/ss.css
@@ -1,3 +1,55 @@
+:root{
+    --color-primary: #2584ff;
+    --color-secondary: #00d9ff;
+    --color-accent: #ff3400;
+    --color-headings: #1b0760;
+    --color-body: #918ca4;
+    --color-border: #ccc;
+    --border-radius:45px;
+} 
+*,*::after,*::before{
+    box-sizing:border-box
+}
+body{
+    font-family: Inter, Arial, Helvetica, sans-serif;
+    font-size: 2.4rem;
+    line-height: 1.5;
+    color:var(--color-body);
+}
+h1, h2, h3{
+    color:var(--color-headings);
+    margin-bottom: 1rem;
+}
+h1{
+    font-size: 7rem;
+}
+h2{
+    font-size: 4rem;
+}
+h3{
+    font-size: 3rem;
+   
+}
+p{
+    margin-top: 0;
+}
+
+@media screen  and (min-width:1024px) 
+{
+    body{
+        font-size:1.8rem;
+    }
+    h1{
+        font-size: 8rem;
+    }
+    h2{
+        font-size: 4rem;
+    }
+    h3{
+        font-size: 2.4rem;  
+    }
+}
+
 .linkarrow{
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -14,4 +66,32 @@ a::after{
 }
 a:hover::after{
     margin-left: 10px;
+}
+.badge{
+    font-weight: 400;
+    white-space: nowrap;
+    padding: .5rem 2rem;
+    font-size: 2rem;
+    border-radius: 20px;
+}
+.badge-primary{
+    background-color: var(--color-primary);
+    color: #fff;
+}
+.badge-secondary{
+    background-color: var(--color-secondary);
+    color: #fff;
+}
+.badge-third{
+    background-color: gray;
+    color: #fff;
+}
+
+@media screen  and (min-width:1024px) {
+    .badge{
+        font-size: 1.5rem;
+    }
+    .badge-third{
+        font-size: 1.2rem;
+    }
 }
