--- a/ss.css
+++ b/ss.css
@@ -95,3 +95,18 @@ a:hover::after{
         font-size: 1.2rem;
     }
 }
+.list{
+    list-style: none;
+    padding: 0;
+    color: var(--color-headings);
+}
+.listinline > .listitem {
+    display: inline-block;
+    margin-left: 2rem;
+}
+
+.listtick {
+    list-style-image: url(/images/tick.svg);
+    padding: 3rem;
+
+}
