--- a/ss.css
+++ b/ss.css
@@ -116,6 +116,8 @@ p{
     height: 40px;
     fill:var(--color-primary)
 }
+
+
 .iconcontainer{
     background-color: #f3f9fa;
     width: 64px;
@@ -176,6 +178,8 @@ p{
     width: 100%;
     display: inline-block;
 }
+
+
 .input{
     padding: 1.5rem 3.5rem;
     border: 1px solid var(--color-border);
@@ -197,6 +201,7 @@ p{
     border-radius: var(--border-radius);
     display: flex;
     align-items: center;
+    padding: 1rem;
 }
 .input-group .input{
     border: 0;
@@ -208,4 +213,27 @@ p{
 .input-group>.iconcontainer{
     margin: 14px;
 
+}
+@media  screen and (min-width:1024px) {
+    .input-group{
+        padding: .1rem;
+        }
+}
+
+.card{
+    border-radius: 7px;
+    box-shadow: 0 0 20px 10px #f3f3f3;
+    overflow: hidden;
+
+}
+.card-header,.card-body{
+    padding: 2rem 3rem;
+}
+.card-primary .card-header{
+    background-color: var(--color-primary);
+    color: #fff;
+}
+.card-secondary .card-header{
+    background-color: var(--color-secondary);
+    color: #fff;
 }
