--- a/ss.css
+++ b/ss.css
@@ -68,6 +68,7 @@ p{
 .linkarrow:hover::after{
     margin-left: 10px;
 }
+
 .badge{
     font-weight: 400;
     white-space: nowrap;
@@ -84,8 +85,11 @@ p{
     color: #fff;
 }
 .badge-third{
-    background-color: gray;
+    background-color: #3cc9e2;
     color: #fff;
+
+    font-size: 1.6rem;
+    padding: .5rem 1.5rem;
 }
 
 @media screen  and (min-width:1024px) {
@@ -101,9 +105,9 @@ p{
     padding: 0;
     color: var(--color-headings);
 }
-.listinline > .listitem {
+.listinline.listitem {
     display: inline-block;
-    margin-left: 2rem;
+    margin-left: 3rem;
 }
 
 .listtick {
@@ -236,4 +240,52 @@ p{
 .card-secondary .card-header{
     background-color: var(--color-secondary);
     color: #fff;
+}
+
+
+.card-secondary.badge-secondary{
+    background: #02cdf1;
+}
+
+
+.plan-name{
+    color: #fff;
+    margin: 0;
+    font-weight: 400;
+    font-size: 2.4rem;
+}
+.plan-price{
+    font-size: 6rem;
+}
+.plan-billing{
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: .8;
+    margin-right: 1rem;
+}
+.plan-description{
+    font-size: 2rem;
+    font-weight: 200;
+    letter-spacing: 1px;  
+      display: block;
+
+}
+.plan.listitem{
+    margin-bottom: 2rem;
+    margin-left: 3rem;
+}
+@media screen and(min-width:1024px){
+    .plan-name{
+        font-size: 1.4rem;
+    }
+    .plan-price{
+        font-size: 5rem;
+    }
+    .plan-billing{
+        font-size: 1.6rem;
+    }
+    .plan-description{
+        font-size: 1.7rem;
+
+    }
 }
