--- a/ss.css
+++ b/ss.css
@@ -274,6 +274,19 @@ p{
     margin-bottom: 2rem;
     margin-left: 3rem;
 }
+
+.plan-popular .card-header{
+    position: relative;
+}
+.plan-popular .card-header::before{
+    content: url(images/bookmark.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top: -5px;
+    right: 5%;
+    
+}
 @media screen and(min-width:1024px){
     .plan-name{
         font-size: 1.4rem;
