Media object defined

--- a/ss.css
+++ b/ss.css
@@ -302,3 +302,17 @@ p{
 
     }
 }
+
+
+.media{
+    display: flex;
+}
+.media-title{
+    margin-top: 0;
+}
+.media-body{
+margin: 0 2rem;
+}
+.media-image{
+    margin-top: 1rem;
+}
