--- a/ss.css
+++ b/ss.css
@@ -8,6 +8,7 @@
     --border-radius:45px;
     --color-border:#ccc;
     --border-radius:30px;
+    --color-body-darker:#918ca4;
 } 
 *,*::after,*::before{
     box-sizing:border-box
@@ -315,4 +316,45 @@ margin: 0 2rem;
 }
 .media-image{
     margin-top: 1rem;
+}
+
+.quote{
+    font-size: 3rem;
+    font-style: italic;
+    color:var(--color-body-darker);
+    line-height: 1.3;
+    
+}
+.quote-text::before{
+content: open-quote;
+}
+.quote-text::after{
+    content: close-quote;
+    }
+.quote-author{
+    font-style: normal;
+    font-size: 3rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+.quote-organisation{
+    color: var(--color-headings);
+    opacity: .4;
+    font-size: 2rem;
+}
+.quote-line{
+    position: relative;
+    bottom: 10px;
+}
+@media screen and (min-width:1024px){
+    .quote{
+        font-size: 2rem;
+    }
+    .quote-author{
+        font-size: 2.4rem;
+    }
+    .quote-organisation{
+        font-size: 1.6rem;
+    }
+    
 }
