--- a/ss.css
+++ b/ss.css
@@ -185,6 +185,10 @@ p{
     background-color: var(--color-headings);
     color: #fff;
 }
+.btn-stretched{
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
 .btn-block{
     width: 100%;
     display: inline-block;
@@ -407,4 +411,41 @@ content: open-quote;
         margin-left: 6rem;
     }
     
+}
+
+
+.callout{
+    padding: 4rem;
+    border-radius: 5px;
+}
+.callout-primary{
+    background: var(--color-primary);
+    color: #fff;
+}
+.callout-heading{
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+
+}
+.callout .btn{
+    justify-self: center;
+    align-self: center;
+}
+.callout-content{
+    text-align: center;
+}
+
+@media screen and (min-width:768px) {
+    .callout .grid-1x2{
+        grid-template-columns: 1fr auto;
+    }
+    .callout-content{
+        text-align: left;
+    }
+    .callout .btn{
+        justify-self: start;
+        margin: 0 3rem;
+    }
+
 }
