--- a/ss.css
+++ b/ss.css
@@ -119,12 +119,12 @@ p{
 .icon{
     width: 40px;
     height: 40px;
-    fill:var(--color-primary)
+    fill:var(--color-primary);
+
 }
 .icon-white{
     fill: #fff;
 }
-
 
 .iconcontainer{
     background-color: #f3f9fa;
@@ -447,5 +447,32 @@ content: open-quote;
         justify-self: start;
         margin: 0 3rem;
     }
+
+}
+
+.collapsible-header{
+    display: flex;
+    justify-content: space-between;
+}
+.collapsible-heading{
+    margin-top: 0;
+    font-size: 3rem;
+}
+.collapsible-icon{
+    transform: rotate(-90deg);
+    transition: .3s;
+}
+.collapsible-content{
+max-height: 0;
+overflow: hidden;
+transition: all .3s;
+opacity: 0;
+}
+.collapsible-expanded .collapsible-icon{
+    transform: rotate(0);
+}
+.collapsible-expanded .collapsible-content{
+max-height: 100vh;
+opacity: .8;
 
 }
