--- a/ss.css
+++ b/ss.css
@@ -476,3 +476,35 @@ max-height: 100vh;
 opacity: .8;
 
 }
+
+
+.block{
+    --padding-vertical:6rem
+    padding: var(--padding-vertical) 2rem;
+}
+.block-heading{
+    margin-top: 0;
+}
+.block-dark{
+    background-color: black;
+    color:#7b858b;
+}
+.block-dark > .block-heading{
+    color: #fff;
+}
+.block-skewed-right{
+    padding-bottom: var(--padding-vertical)+4rem;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+}
+.block-skewed-left{
+    padding-bottom: var(--padding-vertical)+4rem;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+}
+.block-header{
+    text-align: center;
+}
+
+.container{
+    max-width:1140px;
+    margin: 0 auto;
+}
