--- a/ss.css
+++ b/ss.css
@@ -508,3 +508,61 @@ opacity: .8;
     max-width:1140px;
     margin: 0 auto;
 }
+a{
+    text-decoration: none;
+}
+
+.nav{
+    background: #000;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:0 1rem;
+    align-items: center;
+}
+.nav-list{
+    width: 100%;
+    margin: 0;
+
+}
+.nav-item{
+    padding:.5rem 2rem;
+    border-bottom: 1px solid #222;
+}
+.nav-item > a{
+    color: #d2d0db;
+    transition: color .3sec;
+}
+.nav-item > a:hover{
+    color: #fff;
+}
+.nav-toggler{
+    opacity: .5;
+    transition: box-shadow .15s;
+    cursor: pointer;
+}
+
+.nav.collapsible-expanded .nav-toggler{
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666;
+    border-radius: 5px;
+}
+.nav-brand{
+    transform: translateY(5px);
+}
+
+@media screen and (min-width:768px) {
+    .nav-toggler{
+        display: none;
+    }
+    .nav-list{
+        width: auto;
+        display: flex;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+    .nav-item{
+        border: 0;
+    }
+}
