--- a/ss.css
+++ b/ss.css
@@ -656,4 +656,26 @@ a{
     margin: 0 auto;
   }
 
+
+
+
+.feature-heading{
+    margin: 1rem 0;
+}  
+.feature{
+    gap: 4rem 2rem;
+    margin: 12rem 0;
+}
+.feature:first-of-type{
+    margin-top: 6rem;
+}
+.feature-image{
+    width:100%;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(even) .feature-content{
+        order: 2;
+    }
+}
   
