--- a/components/collapsibles.html
+++ b/components/collapsibles.html
@@ -2,7 +2,7 @@
     <header class="collapsible-header">
         <h2 class="collapsible-heading">Item 1</h2>
             <svg >
-                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+                <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
             </svg>
     </header>
     <div class="collapsible-content">
@@ -13,7 +13,7 @@
     <header class="collapsible-header">
         <h2 class="collapsible-heading">Item 1</h2>
             <svg >
-                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+                <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
             </svg>
     </header>
     <div class="collapsible-content">
