--- a/ss.css
+++ b/ss.css
@@ -332,7 +332,7 @@ p{
     transform: scale(1.15);
 }
 
-@media screen and(min-width:1024px){
+@media screen and (min-width:1024px){
     .plan-name{
         font-size: 1.4rem;
     }
@@ -574,7 +574,7 @@ a{
 }
 .nav-item > a{
     color: #d2d0db;
-    transition: color .3sec;
+    transition: color 0.3s;
 }
 .nav-item > a:hover{
     color: #fff;
